[tool.poetry]
name = "shot"
version = "0.1.0"
description = "Give daily shot of your favourite cam"
authors = ["Your Name <your@email.com>"]
#packages = [{include = "shot"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
APScheduler = "3.10.4"
tzlocal = "5.2"
Pillow = "10.2.0"
SQLAlchemy = "1.3.0"
aiogoogle = "*"
aiohttp = "*"
aiotg = "1.0.0"
alembic = "1.0.8"
async_lru = "*"
async_timeout = "*"
backoff = "*"
dataclasses-json = "0.3.2"
imageio = "2.4.1"
loguru = "0.2.5"
moviepy = "0.2.3.5"
pendulum = "2.0.4"
psycopg2-binary = "2.9.9"
sqla-wrapper = "2.0.1"
asyncio-throttle = "1.0.2"

[tool.poetry.scripts]
movie = "shot.movie:main"

[tool.poetry.dev-dependencies]

